refactor: Change user's name to username
