# app/Http/Requests/User/StoreUserRequest.php
@@ -9,18 +9,20 @@
  * For inquiries, please contact: [info@cjnextgensys.com]
 */
 
-namespace App\Http\Requests;
+namespace App\Http\Requests\User;
 
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Validation\Rule;
+use Illuminate\Http\Exceptions\HttpResponseException;
+use Illuminate\Contracts\Validation\Validator;
 
 /**
  * @OA\Schema(
  *     schema="StoreUserRequest",
  *     type="object",
  *     title="User Create Request",
- *     required={"name", "email", "password"},
- *     @OA\Property(property="name", type="string", example="samantha"),
+ *     required={"username", "email", "password"},
+ *     @OA\Property(property="username", type="string", example="samantha"),
  *     @OA\Property(property="email", type="string", example="samantha@example.com"),
  *     @OA\Property(property="password", type="string", example="samantha123ABC"),
  * )
@@ -43,9 +45,26 @@ class StoreUserRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'name' => ['required', 'max:255'],
-            'email' => ['required', 'max:255', 'email', Rule::unique('users', 'email')],
+            'username' => [
+                'required', 
+                'max:255',
+                Rule::unique('users', 'username')
+            ],
+            'email' => [
+                'required', 
+                'max:255', 
+                'email', 
+                Rule::unique('users', 'email')
+            ],
             'password' => ['required', 'max:255']
         ];
+    }
+
+    protected function failedValidation(Validator $validator)
+    {
+        // Get validation errors as a flat array
+        $errors = $validator->errors()->all();
+
+        throw new HttpResponseException(response()->json(['errors' => $errors], 422));
     }
 }
