# app/Models/User.php
@@ -27,9 +27,9 @@ class User extends Authenticatable
      * @var list<string>
      */
     protected $fillable = [
-        'name',
+        'username',
         'email',
-        'password',
+        'password'
     ];
 
     /**
